 * Fix cake walking through bounce world edge
 * Fix cake walking through land when reaching wrap world edge
 * Laser sight now works properly through wrap world edge
 * Fix projectiles behaving incorrectly with land just behind the wrap world edge
 * Fix bee weapon becoming unusable when hitting attack key in mid-air
 * Limit hedgehog health to 268435455 to prevent some bugs

Game, controls and commands:
 + Add new key to show mission panel (default: M)
 + Add new key to cycle through timer values (default: N)
 + Add default controls for controller (see README.md)
 + Add chat command “/help”, displays help for chat commands
 + Rename chat command “/team” to “/clan” (but “/team” still works)
 * Functionality of controllers restored
 * Fix crash when 2 or more controllers were connected
 * Fix cursor teleporting to center after leaving game with a video recording
 * Fix /hta, /hsa and /hya commands not writing message in chat

Game, audiovisuals:
 + Campaigns and missions now use the user's chosen custom clan colors
 + New default brown clan color for better contrast
 + Allow to change volume during pause
 * Fix extreme amounts of droplets when shooting with minigun into ocean world edge
 * Fix some flakes disappearing in world wrap worlds while moving camera
 * Fix invisible projectile timer, attack bar, target on other side of wrap world edge
 * Fix attack bar drawn over GUI elements
 * Fix video recorder not working when game audio was disabled
 * Fix teleport tooltip claiming it doesn't end turn in hog placing phase with inf. attack
 * Prevent voices from being spoken directly before a victory voice
 * Fix damage not being displayed if hog drowns in water with 100% opacity (like in Compost theme)
 * Fix retreat timer appearing after using baseball bat or whip and immediately taking damage

Frontend:
 + Add help button in main menu (link to Hedgewars Wiki)
 + Add setting to disable audio dampening when losing window focus